src/objects/Delivery_Item__c.object
<CustomObject>
    <description>List the delivery items related to a delivery</description>
    <fields>
        <fullName>Customer_Address__c</fullName>
        <formula>Delivery__r.Customer_Account__r.BillingStreet  &amp;  &apos;, &apos; &amp;  
Delivery__r.Customer_Account__r.BillingCity &amp;  &apos;, &apos; &amp;  
 Delivery__r.Customer_Account__r.BillingState &amp;  &apos;, &apos; &amp;  Delivery__r.Customer_Account__r.BillingPostalCode</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Comments__c</fullName>
        <description>If there are any issues with Delivery, issue reason will be captured here</description>
        <label>Customer Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Customer_Name__c</fullName>
        <formula>Delivery__r.Customer_Account__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Delivery_Item_Name__c</fullName>
        <label>Delivery Item Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Delivery_Item_Status__c</fullName>
        <label>Delivery Item Status</label>
        <picklist>
            <picklistValues>
                <fullName>Open</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Delivered</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Delivery with Issues</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Delivery Rejected</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Delivery__c</fullName>
        <label>Delivery</label>
        <referenceTo>Delivery__c</referenceTo>
        <relationshipLabel>Delivery Items</relationshipLabel>
        <relationshipName>Delivery_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Item_Description__c</fullName>
        <label>Item Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Package_Number__c</fullName>
        <label>Package Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>R_D_Coordinates__c</fullName>
        <label>R/D Coordinates</label>
        <scale>4</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>Signature_Date__c</fullName>
        <description>The date and time customer signed the delivery acceptance</description>
        <label>Signature Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Signature_Printed__c</fullName>
        <label>Signee Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Signature__c</fullName>
        <label>Signature</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Delivery Item</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Delivery_Item_Name__c</columns>
        <columns>Delivery_Item_Status__c</columns>
        <columns>Package_Number__c</columns>
        <columns>Quantity__c</columns>
        <columns>Delivery__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>DI-{0000}</displayFormat>
        <label>Delivery Item No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Delivery Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>